create actions for deploy

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,9 +1,14 @@
 {
+  "ConnectionStrings": {
+    "Connection": "Filename=./dashboard.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "Ambiente": "DEV"
 }
