--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,7 @@
 {
-  "ConnectionStrings": {
-    //"Connection": "Filename=C:/home/site/wwwroot/dashboard.db"
-    //"Connection": "Data Source=./dashboard.db"
-    "Connection": "Filename=./dashboard.db"
-  },
+  //"ConnectionStrings": {
+  //  "Connection": "Filename=C:/home/site/wwwroot/dashboard.db"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -11,5 +9,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Ambiente": "PROD"
 }
