Create news endpoints and change readme

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
-  //"ConnectionStrings": {
-  //  "Connection": "Filename=C:/home/site/wwwroot/dashboard.db"
-  //},
+  "ConnectionStrings": {
+    "Connection": "Data Source=dashboard.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
