--- a/DashboardAPI.csproj
+++ b/DashboardAPI.csproj
@@ -25,7 +25,7 @@
 
   <ItemGroup>
     <None Update="dashboard.db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 </Project>
