--- a/DashboardAPI.csproj
+++ b/DashboardAPI.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <None Update="dashboard.db">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 </Project>
